<resources>
    <string name="app_name">lake-app</string>
    <string name="title_activity_lake_login">lake_login</string>

    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>

    <!-- login text  -->
    <string name="img_home">community image</string>
    <string name="title_login">title image login</string>
    <string name="input_email_login">Enter your email..</string>
    <string name="input_passwd_login">Enter your password..</string>
    <string name="forgot_passwd">Forgot Password?</string>
    <string name="line_have_account">Line for split contents</string>
    <string name="have_account">Don\'t have an account? Sign up</string>

    <!-- register text  -->
    <string name="img_register">title register image</string>
    <string name="register_fname">First name..</string>
    <string name="register_confirm_password">Confirm password..</string>
    <string name="register_btn_account">Register</string>
    <string name="contract_text">By signing up you agree to our Terms of  Use and Privacy Policy</string>


    <!-- error strings -->
    <string name="error_invalid_password">The passowrds does not match</string>
    <string name="error_field_required">O campo é obrigatório</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="dialog">Ok</string>
    <string name="loading">Loading data..</string>
    <string name="loading_login">Login in progress..</string>

    <!-- main chat -->
    <string name="prompt_msg">Type a message..</string>
    <string name="action_send">Send</string>
    <string name="sample_message">Hello!</string>


</resources>